NEW

- /joingame accepts optional nickname argument
- implement Amrita's checker for sliding into those DMs
- /blame tag whoever is relevant, not just elections (make /blame actually good)
- /blame should be a valid command for spectators
- rate-limit /blame
- reiterate all stats when a policy is played
- warn a Fascist if they are about to kill Hitler
- disallow single digit names + more name restrictions like "me too thanks"

UNTESTED

- Have the bot message killed players to break the news

CUMMING SOON

- allow arguments to creategame to disallow certain numbers of players
- track and annotate CNH
- spectator mode where one gets role info
- keep a string representing the history of tickets and policies, accessible via command
   - furthermore, implement an official claim system so pres/chancy can log claims
- cursed content 1% of the time
- allow multiple simultaneous games in different chats
- auto-ja, auto-nein, auto-ja-until-HZ, auto-nein-until-HZ, auto-cancel
- kill @spaceandgay automatically