@@ -12,6 +12,11 @@ NEW
 UNTESTED
 
 - Have the bot message killed players to break the news
+- Fixed issue where bot can have unexpected behavior during network outages
+
+IN PROGRESS
+
+- allow multiple simultaneous games in different chats
 
 CUMMING SOON
 
@@ -21,6 +26,5 @@ CUMMING SOON
 - keep a string representing the history of tickets and policies, accessible via command
    - furthermore, implement an official claim system so pres/chancy can log claims
 - cursed content 1% of the time
-- allow multiple simultaneous games in different chats
 - auto-ja, auto-nein, auto-ja-until-HZ, auto-nein-until-HZ, auto-cancel
 - kill @spaceandgay automatically
